2010-09-29  João Paulo Rechi Vita  <jprvita@profusion.mobi>

Reviewed by Antonio Gomes.

        [Curl] Fix unused and unitialized warnings.
        https://bugs.webkit.org/show_bug.cgi?id=46831

        No new tests since no new funcionality has been added.

        * platform/network/curl/ResourceHandleCurl.cpp:
        (WebCore::allowsAnyHTTPSCertificateHosts):
        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::ResourceHandleManager::ResourceHandleManager):
        (WebCore::handleLocalReceiveResponse):
        (WebCore::ResourceHandleManager::downloadTimerCallback):
        (WebCore::ResourceHandleManager::initializeHandle):

Canonical link: https://commits.webkit.org/59338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68679 268f45cc-cd09-0410-ab3c-d52691b4dbfc