WebCore/platform/network/curl/ResourceHandleManager.cpp
@@ -121,8 +121,9 @@ static void curl_unlock_callback(CURL* handle, curl_lock_data data, void* userPt
 ResourceHandleManager::ResourceHandleManager()
     : m_downloadTimer(this, &ResourceHandleManager::downloadTimerCallback)
     , m_cookieJarFileName(0)
-    , m_runningJobs(0)
     , m_certificatePath (certificatePath())
+    , m_runningJobs(0)
+
 {
     curl_global_init(CURL_GLOBAL_ALL);
     m_curlMultiHandle = curl_multi_init();
@@ -164,7 +165,7 @@ static void handleLocalReceiveResponse (CURL* handle, ResourceHandle* job, Resou
     // TODO: See if there is a better approach for handling this.
      const char* hdr;
      CURLcode err = curl_easy_getinfo(handle, CURLINFO_EFFECTIVE_URL, &hdr);
-     ASSERT(CURLE_OK == err);
+     ASSERT_UNUSED(err, CURLE_OK == err);
      d->m_response.setURL(KURL(ParsedURLString, hdr));
      if (d->client())
          d->client()->didReceiveResponse(job, d->m_response);
@@ -372,7 +373,7 @@ void ResourceHandleManager::downloadTimerCallback(Timer<ResourceHandleManager>* 
         ASSERT(handle);
         ResourceHandle* job = 0;
         CURLcode err = curl_easy_getinfo(handle, CURLINFO_PRIVATE, &job);
-        ASSERT(CURLE_OK == err);
+        ASSERT_UNUSED(err, CURLE_OK == err);
         ASSERT(job);
         if (!job)
             continue;
@@ -711,7 +712,7 @@ void ResourceHandleManager::initializeHandle(ResourceHandle* job)
         CURLcode error = curl_easy_pause(d->m_handle, CURLPAUSE_ALL);
         // If we did not pause the handle, we would ASSERT in the
         // header callback. So just assert here.
-        ASSERT(error == CURLE_OK);
+        ASSERT_UNUSED(error, error == CURLE_OK);
     }
 #endif
 #ifndef NDEBUG
